# app-finanzas-personales

./: .gitattributes  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: 01-analisis-requerimientos.html  02-planificacion-fases.html  Análisis de Requerimientos - App Finanzas Desktop.docx
nucleo/: Cargo.toml
nucleo/src/: dinero.rs  interes.rs  lib.rs  movimiento.rs  proyeccion.rs  saldo.rs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_moneda.sql  0002_cuenta_categoria_movimiento.sql  0003_cotizacion.sql  0004_regla_recurrente.sql  0005_movimiento_regla.sql  0006_tasa_tna.sql  0007_baja_tna_cuenta.sql  0008_prestamo.sql  0009_regla_mes.sql  0010_parametro.sql  0011_instrumento.sql
src-tauri/src/: comandos.rs  db.rs  lib.rs  main.rs
src/app/: App.css  App.test.tsx  App.tsx
src/modules/cuentas/: FormularioCuenta.tsx  FormularioTenencia.tsx  PantallaCuentas.tsx  cuentas.css  cuentas.repositorio.ts  cuentas.servicio.test.ts  cuentas.servicio.ts  cuentas.tipos.ts  tenencias.servicio.test.ts  tenencias.servicio.ts
src/modules/dashboard/: PanelCotizaciones.tsx  PantallaDashboard.tsx  dashboard.css  resumen.ts  saldos.ts
src/modules/instrumentos/: instrumentos.api.ts  instrumentos.repositorio.ts  instrumentos.servicio.ts
src/modules/movimientos/: FormularioMovimiento.tsx  PantallaMovimientos.tsx  movimientos.repositorio.ts  movimientos.tipos.ts
src/shared/: db.ts  formato.ts  monedas.ts
src/styles/: componentes.css  global.css
src/test/: setup.ts
(+37 files in other folders)
